AngCompiler4455/src/src/gen/AngParser.java
// Generated from C:/Users/ASUS/Desktop/AngCompiler4455/src/AngParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		At=1, OpenBracket=2, CloseBracket=3, OpenParen=4, CloseParen=5, OpenBrace=6, 
		CloseBrace=7, SemiColon=8, Comma=9, Assign=10, Colon=11, Ellipsis=12, 
		Dot=13, PlusPlus=14, MinusMinus=15, Plus=16, Minus=17, BitNot=18, Not=19, 
		Multiply=20, Divide=21, Modulus=22, Power=23, NullCoalesce=24, QuestionMark=25, 
		Hashtag=26, RightShiftArithmetic=27, LeftShiftArithmetic=28, RightShiftLogical=29, 
		LessThan=30, MoreThan=31, LessThanEquals=32, GreaterThanEquals=33, Equals_=34, 
		NotEquals=35, Dolar=36, IdentityEquals=37, IdentityNotEquals=38, BitAnd=39, 
		BitXOr=40, BitOr=41, And=42, Or=43, MultiplyAssign=44, DivideAssign=45, 
		ModulusAssign=46, PlusAssign=47, MinusAssign=48, LeftShiftArithmeticAssign=49, 
		RightShiftArithmeticAssign=50, RightShiftLogicalAssign=51, BitAndAssign=52, 
		BitXorAssign=53, BitOrAssign=54, PowerAssign=55, ARROW=56, Null=57, Import=58, 
		Break=59, Map=60, Do=61, Instanceof=62, Typeof=63, Case=64, Else=65, New=66, 
		Var=67, Catch=68, Finally=69, Return=70, Void=71, Continue=72, Console=73, 
		For=74, Switch=75, While=76, Debugger=77, Function=78, This=79, With=80, 
		Default=81, If=82, Throw=83, Delete=84, In=85, Try=86, As=87, From=88, 
		UseState=89, UseRef=90, UseEffect=91, Class=92, Enum=93, Extends=94, Super=95, 
		Const=96, Export=97, Async=98, Await=99, Implements=100, Let=101, Private=102, 
		Public=103, Interface=104, Package=105, Protected=106, Static=107, Yield=108, 
		React=109, Number1=110, String=111, Boolean1=112, Log=113, Tuple=114, 
		Any=115, Array=116, CreateElement=117, Boolean=118, Number=119, ID=120, 
		ID2=121, EnumID=122, DecimalLiteral=123, StringLiteral=124, BackTick=125, 
		JsxComment=126, MultiLineComment=127, HtmlComment=128, SingleLineComment=129, 
		UnexpectedCharacter=130, CDATA=131, TemplateStringStartExpression=132, 
		TemplateStringAtom=133;
	public static final int
		RULE_app = 0, RULE_codeLine = 1, RULE_statments = 2, RULE_class = 3, RULE_header_body_value = 4, 
		RULE_header_body = 5, RULE_header = 6, RULE_import_statment = 7, RULE_html_template = 8, 
		RULE_htmlElement = 9, RULE_htmlContent = 10, RULE_htmltext = 11, RULE_operation = 12, 
		RULE_htmlsubcontent = 13, RULE_htmlAttribute = 14, RULE_htmlAttributeValue = 15, 
		RULE_datatype = 16, RULE_keyWord = 17, RULE_keyWordValues = 18, RULE_variableStatement = 19, 
		RULE_enumCreation = 20, RULE_varType = 21, RULE_enumStatment = 22, RULE_enumItem = 23, 
		RULE_functionBodyStatments = 24, RULE_functionAttributes = 25, RULE_functionBody = 26, 
		RULE_functionStatment = 27, RULE_printStatment = 28, RULE_definelist = 29, 
		RULE_row = 30, RULE_rowvalue = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"app", "codeLine", "statments", "class", "header_body_value", "header_body", 
			"header", "import_statment", "html_template", "htmlElement", "htmlContent", 
			"htmltext", "operation", "htmlsubcontent", "htmlAttribute", "htmlAttributeValue", 
			"datatype", "keyWord", "keyWordValues", "variableStatement", "enumCreation", 
			"varType", "enumStatment", "enumItem", "functionBodyStatments", "functionAttributes", 
			"functionBody", "functionStatment", "printStatment", "definelist", "row", 
			"rowvalue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','", 
			"'='", "':'", "'...'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", 
			"'*'", "'/'", "'%'", "'**'", "'??'", "'?'", "'#'", "'>>'", "'<<'", "'>>>'", 
			"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'$'", "'==='", "'!=='", 
			"'&'", "'^'", "'|'", "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", 
			"'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'**='", 
			"'=>'", "'null'", "'import'", "'break'", "'map'", "'do'", "'instanceof'", 
			"'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'", "'finally'", 
			"'return'", "'void'", "'continue'", "'console'", "'for'", "'switch'", 
			"'while'", "'debugger'", "'function'", "'this'", "'with'", "'default'", 
			"'if'", "'throw'", "'delete'", "'in'", "'try'", "'as'", "'from'", "'useState'", 
			"'useRef'", "'useEffect'", "'class'", "'enum'", "'extends'", "'super'", 
			"'const'", "'export'", "'async'", "'await'", "'implements'", "'let'", 
			"'private'", "'public'", "'interface'", "'package'", "'protected'", "'static'", 
			"'yield'", "'React'", "'number'", "'string'", "'boolean'", "'log'", "'tuple'", 
			"'any'", "'Array'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "At", "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
			"OpenBrace", "CloseBrace", "SemiColon", "Comma", "Assign", "Colon", "Ellipsis", 
			"Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
			"Divide", "Modulus", "Power", "NullCoalesce", "QuestionMark", "Hashtag", 
			"RightShiftArithmetic", "LeftShiftArithmetic", "RightShiftLogical", "LessThan", 
			"MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", "NotEquals", 
			"Dolar", "IdentityEquals", "IdentityNotEquals", "BitAnd", "BitXOr", "BitOr", 
			"And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", "PlusAssign", 
			"MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
			"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
			"PowerAssign", "ARROW", "Null", "Import", "Break", "Map", "Do", "Instanceof", 
			"Typeof", "Case", "Else", "New", "Var", "Catch", "Finally", "Return", 
			"Void", "Continue", "Console", "For", "Switch", "While", "Debugger", 
			"Function", "This", "With", "Default", "If", "Throw", "Delete", "In", 
			"Try", "As", "From", "UseState", "UseRef", "UseEffect", "Class", "Enum", 
			"Extends", "Super", "Const", "Export", "Async", "Await", "Implements", 
			"Let", "Private", "Public", "Interface", "Package", "Protected", "Static", 
			"Yield", "React", "Number1", "String", "Boolean1", "Log", "Tuple", "Any", 
			"Array", "CreateElement", "Boolean", "Number", "ID", "ID2", "EnumID", 
			"DecimalLiteral", "StringLiteral", "BackTick", "JsxComment", "MultiLineComment", 
			"HtmlComment", "SingleLineComment", "UnexpectedCharacter", "CDATA", "TemplateStringStartExpression", 
			"TemplateStringAtom"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppContext extends ParserRuleContext {
		public List<CodeLineContext> codeLine() {
			return getRuleContexts(CodeLineContext.class);
		}
		public CodeLineContext codeLine(int i) {
			return getRuleContext(CodeLineContext.class,i);
		}
		public AppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_app; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterApp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitApp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitApp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppContext app() throws RecognitionException {
		AppContext _localctx = new AppContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_app);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				codeLine();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 288230377225453570L) != 0) || _la==Export );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeLineContext extends ParserRuleContext {
		public CodeLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeLine; }
	 
		public CodeLineContext() { }
		public void copyFrom(CodeLineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportContext extends CodeLineContext {
		public Import_statmentContext import_statment() {
			return getRuleContext(Import_statmentContext.class,0);
		}
		public ImportContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassCodeContext extends CodeLineContext {
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public ClassCodeContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterClassCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitClassCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitClassCode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HeadersContext extends CodeLineContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public HeadersContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterHeaders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitHeaders(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitHeaders(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContext extends CodeLineContext {
		public Html_templateContext html_template() {
			return getRuleContext(Html_templateContext.class,0);
		}
		public HtmlContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterHtml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitHtml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitHtml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeLineContext codeLine() throws RecognitionException {
		CodeLineContext _localctx = new CodeLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codeLine);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Import:
				_localctx = new ImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				import_statment();
				}
				break;
			case At:
				_localctx = new HeadersContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				header();
				}
				break;
			case Export:
				_localctx = new ClassCodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				class_();
				}
				break;
			case LessThan:
				_localctx = new HtmlContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				html_template();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatmentsContext extends ParserRuleContext {
		public StatmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statments; }
	 
		public StatmentsContext() { }
		public void copyFrom(StatmentsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EnumCreationRulesContext extends StatmentsContext {
		public EnumCreationContext enumCreation() {
			return getRuleContext(EnumCreationContext.class,0);
		}
		public EnumCreationRulesContext(StatmentsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterEnumCreationRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitEnumCreationRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitEnumCreationRules(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStatementRulesContext extends StatmentsContext {
		public FunctionStatmentContext functionStatment() {
			return getRuleContext(FunctionStatmentContext.class,0);
		}
		public FunctionStatementRulesContext(StatmentsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterFunctionStatementRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitFunctionStatementRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitFunctionStatementRules(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DatatypeRuleContext extends StatmentsContext {
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public DatatypeRuleContext(StatmentsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterDatatypeRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitDatatypeRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitDatatypeRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatmentsContext statments() throws RecognitionException {
		StatmentsContext _localctx = new StatmentsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statments);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new FunctionStatementRulesContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				functionStatment();
				}
				break;
			case 2:
				_localctx = new DatatypeRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				datatype();
				}
				break;
			case 3:
				_localctx = new EnumCreationRulesContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				enumCreation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassContext extends ParserRuleContext {
		public TerminalNode Export() { return getToken(AngParser.Export, 0); }
		public TerminalNode Class() { return getToken(AngParser.Class, 0); }
		public TerminalNode ID() { return getToken(AngParser.ID, 0); }
		public TerminalNode OpenBrace() { return getToken(AngParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(AngParser.CloseBrace, 0); }
		public List<StatmentsContext> statments() {
			return getRuleContexts(StatmentsContext.class);
		}
		public StatmentsContext statments(int i) {
			return getRuleContext(StatmentsContext.class,i);
		}
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class_() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(Export);
			setState(81);
			match(Class);
			setState(82);
			match(ID);
			setState(83);
			match(OpenBrace);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 9007217038596097L) != 0)) {
				{
				{
				setState(84);
				statments();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Header_body_valueContext extends ParserRuleContext {
		public Header_body_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_body_value; }
	 
		public Header_body_valueContext() { }
		public void copyFrom(Header_body_valueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BackTickRuleContext extends Header_body_valueContext {
		public List<TerminalNode> BackTick() { return getTokens(AngParser.BackTick); }
		public TerminalNode BackTick(int i) {
			return getToken(AngParser.BackTick, i);
		}
		public Html_templateContext html_template() {
			return getRuleContext(Html_templateContext.class,0);
		}
		public BackTickRuleContext(Header_body_valueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterBackTickRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitBackTickRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitBackTickRule(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StringLiteralRuleContext extends Header_body_valueContext {
		public TerminalNode StringLiteral() { return getToken(AngParser.StringLiteral, 0); }
		public StringLiteralRuleContext(Header_body_valueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterStringLiteralRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitStringLiteralRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitStringLiteralRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Header_body_valueContext header_body_value() throws RecognitionException {
		Header_body_valueContext _localctx = new Header_body_valueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_header_body_value);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringLiteral:
				_localctx = new StringLiteralRuleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(StringLiteral);
				}
				break;
			case BackTick:
				_localctx = new BackTickRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(BackTick);
				setState(94);
				html_template();
				setState(95);
				match(BackTick);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Header_bodyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AngParser.ID, 0); }
		public TerminalNode Colon() { return getToken(AngParser.Colon, 0); }
		public TerminalNode OpenBracket() { return getToken(AngParser.OpenBracket, 0); }
		public List<Header_body_valueContext> header_body_value() {
			return getRuleContexts(Header_body_valueContext.class);
		}
		public Header_body_valueContext header_body_value(int i) {
			return getRuleContext(Header_body_valueContext.class,i);
		}
		public TerminalNode CloseBracket() { return getToken(AngParser.CloseBracket, 0); }
		public TerminalNode Comma() { return getToken(AngParser.Comma, 0); }
		public Header_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).enterHeader_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngParserListener ) ((AngParserListener)listener).exitHeader_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngParserVisitor ) return ((AngParserVisitor<? extends T>)visitor).visitHeader_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Header_bodyContext header_body() throws RecognitionException {
		Header_bodyContext _localctx = new Header_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_header_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ID);
			setState(100);
			match(Colon);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OpenBracket) {
				{
				setState(101);
				match(OpenBracket);
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==StringLiteral || _la==BackTick) {
				{
				{
				setState(104);
				header_body_value();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CloseBracket) {
				{
				setState(110);
				match(CloseBracket);
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(113);
				match(Comma);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
